--- a/Covid19.Rmd
+++ b/Covid19.Rmd
@@ -2,8 +2,8 @@
 
 # Working with the New York Times COVID-19 Data
 
-As we have seen in class, COVID-19 data collected by the *New York
-Times* are available in a repository on Github.  In this assignment we
+COVID-19 data collected by the *New York
+Times* are available in a repository on Github.  We
 will work with these data to reproduce some of the elements of the
 *Times*'s reporting on COVID-19.  
 
@@ -19,28 +19,12 @@ will work with these data to reproduce some of the elements of the
    returns 2, 3, 4) and this can make it somewhat
    inconvenient to use when transforming columns of data frames.
    
-   An alternative is to us the more general `filter()` function with
+   An alternative is to use the more general `filter()` function with
    an appropriate choice of the `filter` and `sides` arguments.  Thus function
    can also be used to computing running averages and similar quantities.
    
-    a. Read the file `us.csv` into R as the data frame `us` and do the
-       following:
+    a. Read the file `us.csv` into R as the data frame `us` 
 	  
-        * Transform the `date` column into a column of class `Date`.
-        * Use `filter()` to add a column named `new_cases` containing the
-          number of new cases reported on each date. The first
-          value in this column will be `NA`.
-        * Use `filter()` to add a column named `new_deaths` containing the
-          number of new deaths reported on each date. The first
-          value in this column will be `NA`.
-        * Use `filter()` to add a column named `avg_new_cases` where
-     	    each element represents the mean number of new cases for the
-     	    previous 7 days (inclusive of the current day).  The first 7
-     	    values in this column will be `NA`.
-        * Use `filter()` to add a column named `avg_new_deaths` where
-     	    each element represents the mean number of new deaths for the
-     	    previous 7 days (inclusive of the current day).  The first 7
-     	    values in this column will be `NA`.
 ```{r}
 
 us <- read.csv(file = 'us.csv', header=TRUE)
@@ -113,19 +97,7 @@ lines(us$avg_new_deaths~date, col="black", data= us, subset=(us$date>= "2020-03-
 
 ```
 
-2. The file `us-states.csv` contains county-level data for the U.S.
-
-    a. Read `us-states.csv` into R as the data frame `us_states`
-       and transform the date column into a column of class `Date`.
-	   
-        
-
-    b. Use `subset()` to extract the data for the state of Florida
-       and save it as a data frame named `florida`. Be sure that the
-	   rows are correctly ordered by date, and then repeat parts 1b
-	   and 1c of this assignment for Florida, i.e., plot the number of
-	   daily new cases and deaths, along with their 7-day running averages.
-
+2. The file `us-states.csv` contains county-level data for the U.S. Transform the date column into a column of class `Date`.
         
 ```  {r}
 
@@ -175,10 +147,8 @@ lines(florida$avg_new_fl_deaths~date, col="black", data= florida, subset=(florid
 
     a. Read `us-counties.csv` into R as the data frame `us_counties`
        and transform the date column into a column of class `Date`.
-	   
-        
 
-    b. Use `subset()` to extract the data for Alachua County, Florida,
+    b. Extract the data for Alachua County, Florida,
        and save it as a data frame named `alachua`. Be sure that the
 	   rows are correctly ordered by date, and then repeat part 1b
 	   this assignment for Alachua County, i.e., plot the number of daily new
